# Research_Software_Project_Template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  00_START_HERE.ipynb  AGENTS.md  AI_GUIDELINES.md  CLAUDE.md  CODEX.md  GEMINI.md  GITHUB_PAGES_TUTORIAL.md  README.md  RESEARCH_SOFTWARE_AI_POLICY.md  TEMPLATE_FILE_GUIDE.md  environment.yml  local_import_demo.ipynb  makefile  oryx-build-commands.txt  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml
guides/: ai-policy.md  github-pages.md  template-customization.md
mypackage/: __init__.py  example.py
mypackage/tests/: __init__.py  test_pytest.py
