# Overview:
# - Purpose: Central configuration for Python tooling.
# - Used by: pytest, black, ruff, mypy, and packaging tools.
# - Adds: Consistent behavior across local development and CI.
# - Learn more: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["mypackage/tests"]
